--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Save images as tarballs
         run: |
-          docker save game-server-api:latest -o api.tar
-          docker save game-server-tcp:latest -o tcp.tar
+          docker save game-server-api:latest -o /tmp/api.tar
+          docker save game-server-tcp:latest -o /tmp/tcp.tar
 
       - name: Copy images to EC2
         uses: appleboy/scp-action@v0.1.7
@@ -41,7 +41,7 @@ jobs:
           host: ${{ env.EC2_HOST }}
           username: ${{ env.EC2_USER }}
           key: ${{ env.EC2_KEY }}
-          source: "api.tar,tcp.tar"
+          source: "/tmp/api.tar,/tmp/tcp.tar"
           target: "~/"
 
       - name: Load images and restart containers on EC2
