--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Save images as tarballs
         run: |
           mkdir -p artifacts
-          docker save game-server-api:latest -o /artifacts/api.tar
-          docker save game-server-tcp:latest -o /artifacts/tcp.tar
+          docker save game-server-api:latest -o artifacts/api.tar
+          docker save game-server-tcp:latest -o artifacts/tcp.tar
           ls -lh artifacts
 
       - name: Copy images to EC2
