--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
           mkdir -p artifacts
           docker save game-server-api:latest -o artifacts/api.tar
           docker save game-server-tcp:latest -o artifacts/tcp.tar
+          chmod -R 755 artifacts
           ls -lh artifacts
 
       - name: Copy images to EC2
