--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,15 @@ jobs:
           key: ${{ env.EC2_KEY }}
           source: "artifacts/api.tar,artifacts/tcp.tar"
           target: "~/"
+          
+      - name: Copy docker-compose.yml to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ env.EC2_HOST }}
+          username: ${{ env.EC2_USER }}
+          key: ${{ env.EC2_KEY }}
+          source: "docker-compose.yml"
+          target: "~/GameServerSolution"
 
       - name: Load images and restart containers on EC2
         uses: appleboy/ssh-action@v1.0.0
