--- a/TcpServer/TcpServer.csproj
+++ b/TcpServer/TcpServer.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.31.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetworkCore\NetworkCore.csproj" />
   </ItemGroup>
 
