--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: ApiServer/Dockerfile
     image: game-server-api:latest
     container_name: api-server
+    env_file:
+      - .env
     ports:
       - "50000:5251"
     networks:
@@ -18,6 +20,8 @@ services:
       dockerfile: TcpServer/Dockerfile
     image: game-server-tcp:latest  
     container_name: tcp-server
+    env_file:
+      - .env
     ports:
       - "50001:7777"
     networks:
