jwt 시크릿키 환경변수 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - "50000:5251"
     networks:
       - gameserver-net
+    environment:
+    - JWT_SECRET_KEY
+    - MYSQL_CONNECTION_STRING
 
   tcp:
     build:
@@ -26,10 +29,12 @@ services:
       - "50001:7777"
     networks:
       - gameserver-net
+    environment:
+      - JWT_SECRET_KEY
+      - MYSQL_CONNECTION_STRING
     depends_on:
       - api
-
-
+    
 networks:
   gameserver-net:
     driver: bridge
